aws/cloudFormation/plantilla_crear_mv_test.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Plantilla para crear una Maquina Virtual en EC2 usando una AMI especifica (Cloud9Ubuntu22-2025-03-26T13-17)"

Parameters:
  InstanceName:
    Type: String
    Default: "MV Tarea investigacion"
    Description: "Nombre de la instancia a crear"
  AMI:
    Type: String
    Default: "ami-0e84f97592c6b078b"
    Description: "ID de AMI"

Resources:
  EC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      Tags:
        - Key: "Name"
          Value: !Ref InstanceName
      ImageId: !Ref AMI
      InstanceType: "t2.micro"
      KeyName: "vockey"
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: "20"
      UserData:
        Fn::Base64: |
          #!/bin/bash
          # Se ejecuta con usuario root por lo que no necesita sudo
          cd ~
          git clone https://github.com/warleon/cloud-computing-tarea-1.git
          cd cloud-computing-tarea-1/app
          chmod +x start_app.sh
          cp flaskapp.service /etc/systemd/system/flaskapp.service
          systemctl enable flaskapp.service
          systemctl start flaskapp.service

  InstanceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Permitir trafico SSH y HTTP desde cualquier lugar"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "8000"
          ToPort: "8000"
          CidrIp: "0.0.0.0/0"

Outputs:
  InstanceId:
    Description: "ID de la instancia EC2"
    Value: !Ref EC2Instance
  InstancePublicIP:
    Description: "IP publica de la instancia"
    Value: !GetAtt EC2Instance.PublicIp
  API:
    Description: API URL
    Value: !Sub "http://${EC2Instance.PublicIp}:8000"
